[package]
name = "yield-iter"
version = "0.2.2"
edition = "2021"

authors = ["uselessgoddess <dodickgod@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/uselessgoddess/yield-iter"
homepage = "https://github.com/uselessgoddess/yield-iter"
description = """
Safe implementation of the `Iterator` trait for `Generator`
"""
categories = ["algorithms"]
keywords = ["generator", "yield", "iterator"]

[dependencies.rayon]
version = "1.5"
optional = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "vs-vec"
harness = false
